implement harvester modes and memorize

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,10 +4,14 @@ better game info display
     X bool constant for toggle
     - info: Summary of energy information: harvest/min, storage
 
-evolve creeps
+implement mode memory for harvester creep (upgraders and builders already have)
+
+creep evolution system
     - stub methods, interfaces
     - implement naive solution
     - suicide inferior creeps?
+
+new role: miner
 
 handle idle creeps
 ideas:
