add some recovery logic, cap general creep template to 16 parts

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@ X begin game with haulers acting as harvesters until miner creeps are made
 X create single energy pickup point for upgraders and builders
     X change rest of creeps to pickup dropped energy
 
-restart system
+recovery system
     - add logic to build new creeps when all have been killed
 
 programmatic extension construction site placement
