--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,10 @@ X create single energy pickup point for upgraders and builders
     X change rest of creeps to pickup dropped energy
 
 recovery system
-    - add logic to build new creeps when all have been killed
+    - add logic to build new basic creeps when all have been killed
+
+programmatic handling of upgrader, builder creep amount
+    - naive solution: while pickup stockpile > x, make another creep
 
 programmatic extension construction site placement
     - hardcode offset map from Spawn1
@@ -40,9 +43,6 @@ capture and control of another room
     - multi-room logic (refactor from single-room)
 
 
-================================================================
 
-
-renew/recycle system for creeps (maybe)
 
 
