--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,7 @@ X create single energy pickup point for upgraders and builders
     X change rest of creeps to pickup dropped energy
 
 recovery system
-    - add logic to build new basic creeps when all have been killed
+    X add logic to build new basic creeps when all have been killed
     - add 'recovery' mode:
         1. create conditional for recovery state
         2. make less upgraders and builders
