update how creep templates generated upon spawn, add more conditionals for upgrader and builder spawns

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,7 +23,7 @@ recovery system
         2. make less upgraders and builders
         3. upgrade creep more conservatively
 
-do not create creeps besides miners and haulers until the pickup flag has energy on it
+X do not create creeps besides miners and haulers until the pickup flag has energy on it
 
 programmatic handling of upgrader, builder creep amount
     - naive solution: while pickup stockpile > x, make another creep
