--- a/TODO.txt
+++ b/TODO.txt
@@ -1,29 +1,4 @@
 
-X new role: miner (needs testing)
-    X miner creep mines energy only
-    X miner creep has specialized part template
-    X add hauler role to pair with miner role
-    X reassign miner to hauler if assigned dies
-
-X new role: hauler (needs testing)
-    X 1 per miner
-    X assigned to a miner
-    X picks up miner's dropped energy
-    X deliver to base
-
-X begin game with haulers acting as harvesters until miner creeps are made
-
-X create single energy pickup point for upgraders and builders
-    X change rest of creeps to pickup dropped energy
-
-X recovery system
-    X add logic to build new basic creeps when all have been killed
-
-X do not create creeps besides miners and haulers until the pickup flag has energy on it
-
-X programmatic handling of upgrader, builder creep amount
-    X naive solution: while pickup stockpile > x, make another creep until max amount
-
 convert pickup flag to storage structure
     - storage model
     - update hauler, builder, upgrader roles
@@ -39,15 +14,13 @@ analytics system - get insights into:
     - controller upgrade/tick
     - construction/tick
 
-road building
-
-tower building and logic
+road, walls, rampart building and maintenance
 
 DEFENSE, DEFENSE, DEFENSE
 
 capture and control of another room
-    - creep scout
-    - capture
+    - claimer creep
+    - capture room
     - multi-room logic (refactor from single-room)
 
 
