update all other models to use modelRoom (breaks spawning)

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,11 +4,11 @@ start thinking about logic-per-room architecture
         - iterate through rooms and do per-room processes
         - do global processes (creep traveling between rooms, etc.)
             1. modelGame (done)
-            2. modelCreep
-            3. modelStorage
-            4. modelTower
-            5. modelEnergySources
-            4. modelPickupFlag
+            2. modelCreep (done)
+            3. modelStorage (done)
+            4. modelTower (done)
+            5. modelEnergySources (done)
+            4. modelPickupFlag (done)
 
 creep spawning
     - continue spawning creep as long as storage is above a certain threshold
