--- a/TODO.txt
+++ b/TODO.txt
@@ -14,15 +14,10 @@ X start thinking about logic-per-room architecture
             9. ctrlTower (done)
             10. ctrlConstruction (done)
             11. ctrlAnalytics (done)
-
-X creep spawning
-    X continue spawning creep as long as storage is above a certain threshold
-
-X towers
-    X update haulers to give towers energy
-    X attack logic
-    X heal logic
-    X repair logic
+            12. roleMiner ()
+            13. roleHauler
+            14. roleUpgrader
+            15. roleBuilder
 
 road, walls, rampart building and maintenance
     - build road on path of haulers and upgraders (they should put down construction sites)
@@ -32,10 +27,6 @@ road, walls, rampart building and maintenance
 DEFENSE, DEFENSE, DEFENSE
     - think about 'defense' mode
     - defense creeps with attack bodyparts
-
-X BUG: haulers indecisive about which extensions to store energy
-    X fix back and forth loop bug
-    X haulers need closest and highest priority target (needs testing)
 
 programmatic extension construction site placement
     - hardcode offset map from Spawn1
